--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ mjx-stretchy-v mjx-c, mjx-stretchy-h mjx-c {
     	        <h1>Multi-Source Music Generation with Latent Diffusion</h1>
                 <!-- <p style="color:lightblue;font-size:18px;">Published as conference paper at ICML 2022  -->
                     [<a href="https://github.com/XZWY/MSLDM">code</a>]
-                    <!-- [<a href="https://arxiv.org/abs/2309.07432">pdf</a>]</p> -->
+                    [<a href="https://arxiv.org/abs/2409.06190">pdf</a>]</p>
 			
 
 
